[tool.poetry]
name = "llm-os"
version = "0.1.0"
description = ""
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

bs4 = "^0.0.2"
duckduckgo-search = "^5.3.1"
exa-py = "^1.0.9"
nest-asyncio = "^1.6.0"
openai = "^1.29.0"
pgvector = "^0.2.5"
phidata = "^2.4.8"
pypdf = "^4.2.0"
sqlalchemy = "^2.0.30"
streamlit = "^1.34.0"
yfinance = "^0.2.38"
duckdb = "^0.10.2"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
psycopg = {version = "^3.1.19", extras = ["binary"]}
watchdog = "^4.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
reportOptionalCall = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportUnboundVariable = "none"

